[gd_scene load_steps=24 format=3 uid="uid://wcjmgrgaja2u"]

[ext_resource type="Script" path="res://battler/player_battler.gd" id="1_535ba"]
[ext_resource type="Texture2D" uid="uid://cgoksibmw0g2d" path="res://imgs/2D Pixel Dungeon Asset Pack/Character_animation/monsters_idle/skull/v2/skull_v2_1.png" id="2_tesel"]
[ext_resource type="Texture2D" uid="uid://cmo1d6ndvvudl" path="res://imgs/2D Pixel Dungeon Asset Pack/items and trap_animation/flag/flag_3.png" id="3_ovg3p"]
[ext_resource type="Texture2D" uid="uid://boorur3j11r3u" path="res://imgs/2D Pixel Dungeon Asset Pack/items and trap_animation/flasks/flasks_1_1.png" id="4_b3r5h"]

[sub_resource type="Animation" id="Animation_k3gq4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(12, 2.08165e-12)]
}

[sub_resource type="Animation" id="Animation_oax7w"]
resource_name = "block"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(12, 8), Vector2(12, 2.08165e-12)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_lho8q"]
resource_name = "unblock"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(12, 2.08165e-12), Vector2(12, 8)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n88qs"]
_data = {
"RESET": SubResource("Animation_k3gq4"),
"block": SubResource("Animation_oax7w"),
"unblock": SubResource("Animation_lho8q")
}

[sub_resource type="Animation" id="Animation_cmjvn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-16, 2.08165e-12)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_n1tti"]
resource_name = "heal"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-16, 2.08165e-12), Vector2(-12, 2.08165e-12), Vector2(2.08165e-12, 2.08165e-12)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j48g3"]
_data = {
"RESET": SubResource("Animation_cmjvn"),
"heal": SubResource("Animation_n1tti")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_106i6"]
bg_color = Color(0, 0, 0, 0.694)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hylqx"]
bg_color = Color(100, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oqfwm"]
bg_color = Color(0, 100, 0, 0.2)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 100, 0, 1)

[sub_resource type="Animation" id="Animation_r8fox"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_2ucwv"]
resource_name = "in_turn"
length = 0.9
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gdcbr"]
_data = {
"RESET": SubResource("Animation_r8fox"),
"in_turn": SubResource("Animation_2ucwv")
}

[sub_resource type="Animation" id="Animation_ctfiq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_0fjwc"]
resource_name = "play"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(2, 2, 2, 1), Color(1, 1, 1, 1), Color(2, 2, 2, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_svwoc"]
_data = {
"RESET": SubResource("Animation_ctfiq"),
"play": SubResource("Animation_0fjwc")
}

[sub_resource type="Animation" id="Animation_nmddt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.001),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(2.08165e-12, 2.08165e-12)]
}

[sub_resource type="Animation" id="Animation_mobvh"]
resource_name = "attack"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-2, 2.08165e-12), Vector2(-4, 2.08165e-12), Vector2(6, 2.08165e-12), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hyf76"]
_data = {
"RESET": SubResource("Animation_nmddt"),
"attack": SubResource("Animation_mobvh")
}

[node name="PlayerBattler" type="Node2D" groups=["PlayerBattler"]]
script = ExtResource("1_535ba")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_tesel")

[node name="Shield" type="Sprite2D" parent="."]
position = Vector2(12, 2.08165e-12)
scale = Vector2(0.4, 1)
texture = ExtResource("3_ovg3p")

[node name="BlockFXAnimation" type="AnimationPlayer" parent="Shield"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_n88qs")
}

[node name="Potion" type="Sprite2D" parent="."]
visible = false
position = Vector2(-16, 2.08165e-12)
texture = ExtResource("4_b3r5h")

[node name="HealFXAnimation" type="AnimationPlayer" parent="Potion"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_j48g3")
}

[node name="HealthBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
offset_left = -8.0
offset_top = 8.0
offset_right = 8.0
offset_bottom = 12.0
theme_override_styles/background = SubResource("StyleBoxFlat_106i6")
theme_override_styles/fill = SubResource("StyleBoxFlat_hylqx")
show_percentage = false

[node name="Panel" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0)
show_behind_parent = true
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 7.0
theme_override_styles/panel = SubResource("StyleBoxFlat_oqfwm")

[node name="TurnIndicatorAnimation" type="AnimationPlayer" parent="Panel"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_gdcbr")
}

[node name="HitFXAnimation" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_svwoc")
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_hyf76")
}
